Add greek letters and misc. logic and set symbols.
All greek letters, ‘forall’, ‘in’, ‘implies’ and ‘equiv’.

--- a/tex/lib/glyph.tex
+++ b/tex/lib/glyph.tex
@@ -19,6 +19,9 @@
 %% ⟸{danger}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\catcode`\≡=13
+\def≡{\equiv}
+
 %%%%%%%%%%%%%%%
 %% ENVIRONMENTS
 
@@ -99,3 +102,71 @@
 \catcode`\∵=13
 \def∴{\raisebox{0.75pt}{$\therefore$}}
 \def∵{\raisebox{0.75pt}{$\because$}}
+
+
+\catcode`\∀=13
+\catcode`\∙=13
+
+\def\startforall{\forall\def∙{\stopforall}}
+\def\stopforall{\def∙{.}.\quad}
+\def∀{\startforall}
+
+\catcode`\∈=13
+\def∈{\in}
+
+\catcode`\⇒=13
+\def⇒{\implies}
+
+%%%%%%%%%%%%%%%%
+%% GREEK LETTERS
+
+\catcode`\ς=13
+\defς{\varsigma}
+\catcode`\ε=13
+\defε{\epsilon}
+\catcode`\ρ=13
+\defρ{\rho}
+\catcode`\τ=13
+\defτ{\tau}
+\catcode`\υ=13
+\defυ{\upsilon}
+\catcode`\θ=13
+\defθ{\theta}
+\catcode`\ι=13
+\defι{\iota}
+\catcode`\ο=13
+\defο{\omicron}
+\catcode`\π=13
+\defπ{\pi}
+\catcode`\α=13
+\defα{\alpha}
+\catcode`\σ=13
+\defσ{\sigma}
+\catcode`\δ=13
+\defδ{\delta}
+\catcode`\φ=13
+\defφ{\phi}
+\catcode`\γ=13
+\defγ{\gamma}
+\catcode`\η=13
+\defη{\eta}
+\catcode`\ξ=13
+\defξ{\xi}
+\catcode`\κ=13
+\defκ{\kappa}
+\catcode`\λ=13
+\defλ{\lambda}
+\catcode`\ζ=13
+\defζ{\zeta}
+\catcode`\χ=13
+\defχ{\chi}
+\catcode`\ψ=13
+\defψ{\psi}
+\catcode`\ω=13
+\defω{\omega}
+\catcode`\β=13
+\defβ{\beta}
+\catcode`\ν=13
+\defν{\nu}
+\catcode`\μ=13
+\defμ{\mu}
